--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,11 @@
   "authors": "Attila Bordán, Reed Meher, Pachia Xiong, Talee Yang",
   "dependencies": {
     "apollo-server-express": "^3.11.1",
+    "bcrypt": "^4.0.1",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
-    "mongoose": "^6.8.0",
-    "bcrypt": "^4.0.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
