--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "prima-materia",
   "version": "1.0",
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
+  },
   "description": "deckbuilding-app",
   "main": "server/server.js",
   "scripts": {
-    "start": "node server/server.js --ignore client",
+    "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
