--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001",
+  "keywords": [
+    "cards",
+    "use-gesture",
+    "useDrag",
+    "useSprings",
+    "interpolation"
+  ],
   "dependencies": {
     "@apollo/client": "^3.5.8",
     "@emotion/react": "^11.10.5",
@@ -19,6 +26,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "^5.0.1",
+    "react-spring": "^9.6.0",
+    "react-use-gesture": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
