--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@testing-library/user-event": "^13.5.0",
     "graphql": "^15.4.0",
     "jwt-decode": "^3.1.2",
+    "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
